2005-05-14  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-wl.el (mhc-wl-summary-filename): Message with number
	100000 is not associated with file.

2005-05-02  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* mhc2ol.in (usage): Add usage of `-H' option.
	(MhcScheduleItem#dump_without_header): New method.
	(Exporter#flag_export_part): New class variable.
	(Exporter#setup_ol_appointments): Don't dump header parts if
	flag_export_part is `body'.
	(Exporter#set_flag_export_part): New function.
	($flag_export_part): New variable and initialize it.
	Support new option `-H'.
	The preceding modifications are derived with a patch from NOGUCHI
	Yusuke <nogunogu@mva.biglobe.ne.jp>.

2005-04-24  KOIE Hidetaka <hide@koie.org> / nom

	* emacs/mhc-guess.el (mhc-guess-date-regexp-list): add regexp.

2005-04-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-guess.el (mhc-guess/make-date-from-english-relative-week):
	Check that a argument `rel-word' is a string before calling
	`downcase' in order to avoid wrong type argument error.

2005-03-23  Yoshiaki Kasahara <kasahara@nc.kyushu-u.ac.jp>

	* ruby-ext/lib/mhc-gtk.rb.in: Use explicit regexp

2005-03-16  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-date-regexp-list): Support new
	regex for Japanese duration.

2005-01-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Bind
	elmo-localdir-folder-path to mhc-mail-path.

2005-01-27  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-mew.el (mhc-mew-highlight-message): Highlight headers
	when import buffer has headers.

2005-01-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-gnus.el (mhc-gnus-insert-summary-contents): Pass null
	string to `mhc-gnus/make-full-mail-header' in order to avoid an
	error that occurs when executing `gnus-summary-print-article'.

2005-01-14  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-input-sequences): New option.