@@ -1,3 +1,9 @@
+2005-05-15  MIYOSHI Masanori  <miyoshi@meadowy.org>
+
+	* emacs/mhc.el (mhc-delete-file-hook): New hook.
+	(mhc-delete-file): Run `mhc-delete-file-hook'.
+	Thanks to NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp>.
+
 2005-05-14  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* emacs/mhc-wl.el (mhc-wl-summary-filename): Message with number
